tests/snapshots/test_adr_gates__set_decision_succeeds_with_complete_alternatives.snap
---
source: tests/adr_gate_tests/decision.rs
expression: snapshot
---
$ govctl adr new Test ADR
Created ADR: gov/adr/ADR-XXXX-test-adr.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option B
Added 'Option B' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick accepted
Marked 'Option A' as accepted
exit: 0

$ govctl adr edit ADR-0001 alternatives[1] --tick rejected
Marked 'Option B' as rejected
exit: 0

$ govctl adr edit ADR-0001 decision --set We chose A.
Set ADR-0001.decision = We chose A.
exit: 0
